--- a/src/components/Filters.astro
+++ b/src/components/Filters.astro
@@ -2,7 +2,27 @@
 
 ---
 
-<div class="flex gap-7">
+<div class="flex flex-wrap gap-7">
+  <select class="w-[250px] rounded-sm border-2 px-4 py-1.5">
+    <option value="">--Please choose an option--</option>
+    <option value="dog">Dog</option>
+    <option value="cat">Cat</option>
+    <option value="hamster">Hamster</option>
+    <option value="parrot">Parrot</option>
+    <option value="spider">Spider</option>
+    <option value="goldfish">Goldfish</option>
+  </select>
+
+  <select class="w-[250px] rounded-sm border-2 px-4 py-1.5">
+    <option value="">--Please choose an option--</option>
+    <option value="dog">Dog</option>
+    <option value="cat">Cat</option>
+    <option value="hamster">Hamster</option>
+    <option value="parrot">Parrot</option>
+    <option value="spider">Spider</option>
+    <option value="goldfish">Goldfish</option>
+  </select>
+
   <select class="w-[250px] rounded-sm border-2 px-4 py-1.5">
     <option value="">--Please choose an option--</option>
     <option value="dog">Dog</option>
