--- a/src/components/KeySwitchItemList.astro
+++ b/src/components/KeySwitchItemList.astro
@@ -1,16 +1,17 @@
 ---
-import { z } from "zod";
-import { ProductResult } from "../utils/schemas";
-import KeySwitchItem from "./KeySwitchItem.svelte";
+import { z } from 'zod';
+import { ProductResult } from '../utils/schemas';
+import KeySwitchItem from './KeySwitchItem.astro';
 
 const ProductsResult = z.array(ProductResult);
 export interface Props {
   products: z.infer<typeof ProductsResult>;
 }
 
-const { products } = Astro.props as Props;
+let { products } = Astro.props as Props;
+products = [...products, ...products];
 ---
 
-<section class="flex flex-wrap gap-9 overflow-auto pb-4">
+<section class="flex flex-wrap gap-5 overflow-auto pt-4 pb-4">
   {products.map((product) => <KeySwitchItem product={product} />)}
 </section>
