--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,7 @@
   --font-display: 'Space Grotesk', 'sans';
   --font-sans: 'Space Grotesk', 'sans';
   --color-eggwhite: #e0d6cc;
+  --color-hover: rgba(0, 0, 0, 0.1);
 }
 
 :root {
@@ -27,7 +28,7 @@
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
-  --border: black;
+  --border: var(--color-stone-500);
   --input: oklch(0.922 0 0);
   --ring: oklch(0.708 0 0);
   --chart-1: oklch(0.646 0.222 41.116);
