--- a/src/pages/switches.astro
+++ b/src/pages/switches.astro
@@ -1,5 +1,5 @@
 ---
-import { getProducts } from './../utils/shopify';
+import { getProductFilters, getProducts } from './../utils/shopify';
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Products from '../components/Products.astro';
 import { setCache } from '../utils/cache';
@@ -11,6 +11,7 @@ const title = 'Switches';
 const headers = Astro.request.headers;
 const ip = headers.get('x-vercel-forwarded-for') || Astro.clientAddress;
 const products = await getProducts({ limit: 250, buyerIP: ip });
+await getProductFilters({ buyerIP: ip });
 
 setCache.short(Astro);
 ---
