--- a/src/pages/switches/mech-switches.astro
+++ b/src/pages/switches/mech-switches.astro
@@ -4,7 +4,7 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
 import Products from '../../components/Products.astro';
 import { setCache } from '../../utils/cache';
 import KeySwitchItemList from '../../components/KeySwitchItemList.astro';
-import Filters from '../../components/Filters.astro';
+import Filters from '../../components/Filters';
 
 const title = 'Mechanical switches';
 const headers = Astro.request.headers;
