--- a/src/pages/switches.astro
+++ b/src/pages/switches.astro
@@ -7,7 +7,6 @@ import { KeySwitchSection } from '@/components/KeySwitchSection';
 const title = 'Switches';
 const headers = Astro.request.headers;
 const ip = headers.get('x-vercel-forwarded-for') || Astro.clientAddress;
-const products = await getProducts({ limit: 250, buyerIP: ip });
 const filters = await getProductFilters({ buyerIP: ip });
 
 setCache.short(Astro);
@@ -18,7 +17,7 @@ setCache.short(Astro);
     <div class="flex max-w-screen-xl flex-col gap-16">
       <h1 class="ms-[-5px] mt-[-5px] text-8xl font-bold">All switches</h1>
       <div class="flex flex-col gap-6">
-        <KeySwitchSection filters={filters} products={products} buyerIP={ip} client:load />
+        <KeySwitchSection availableFilters={filters} buyerIP={ip} client:load />
       </div>
     </div>
   </div>
