--- a/src/pages/switches/he-switches.astro
+++ b/src/pages/switches/he-switches.astro
@@ -1,16 +1,14 @@
 ---
-import { getProducts } from '../../utils/shopify';
+import { getProductFilters } from '../../utils/shopify';
 import BaseLayout from '../../layouts/BaseLayout.astro';
-import Products from '../../components/Products.astro';
 import { setCache } from '../../utils/cache';
-import KeySwitchItemList from '../../components/KeySwitchItemList.astro';
-import Filters from '../../components/filters';
 import PageTitle from '../../components/PageTitle.astro';
+import { KeySwitchSection } from '@/components/KeySwitchSection';
 
 const title = 'Key switches';
 const headers = Astro.request.headers;
 const ip = headers.get('x-vercel-forwarded-for') || Astro.clientAddress;
-const products = await getProducts({ limit: 250, buyerIP: ip });
+const filters = await getProductFilters({ buyerIP: ip });
 
 setCache.short(Astro);
 ---
@@ -20,8 +18,7 @@ setCache.short(Astro);
     <div class="flex max-w-screen-xl flex-col gap-16">
       <PageTitle text="Hall effect switches" />
       <div class="flex flex-col gap-6">
-        <Filters />
-        <KeySwitchItemList products={products} />
+        <KeySwitchSection availableFilters={filters} buyerIP={ip} client:load />
       </div>
     </div>
   </div>
