--- a/src/pages/switches/mech-switches.astro
+++ b/src/pages/switches/mech-switches.astro
@@ -1,15 +1,13 @@
 ---
-import { getProducts } from '../../utils/shopify';
+import { getProductFilters } from '../../utils/shopify';
 import BaseLayout from '../../layouts/BaseLayout.astro';
-import Products from '../../components/Products.astro';
 import { setCache } from '../../utils/cache';
-import KeySwitchItemList from '../../components/KeySwitchItemList.astro';
-import Filters from '../../components/filters';
+import { KeySwitchSection } from '@/components/KeySwitchSection';
 
 const title = 'Mechanical switches';
 const headers = Astro.request.headers;
 const ip = headers.get('x-vercel-forwarded-for') || Astro.clientAddress;
-const products = await getProducts({ limit: 250, buyerIP: ip });
+const filters = await getProductFilters({ buyerIP: ip });
 
 setCache.short(Astro);
 ---
@@ -19,8 +17,7 @@ setCache.short(Astro);
     <div class="flex max-w-screen-xl flex-col gap-16">
       <h1 class="ms-[-5px] mt-[-5px] text-8xl font-bold">Mechanical switches</h1>
       <div class="flex flex-col gap-6">
-        <Filters />
-        <KeySwitchItemList products={products} />
+        <KeySwitchSection availableFilters={filters} buyerIP={ip} client:load />
       </div>
     </div>
   </div>
