--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { getProducts } from './../utils/shopify';
+import { getProducts } from './../utils/shopify/products';
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Products from '../components/Products.astro';
 import { setCache } from '../utils/cache';
