--- a/src/pages/switches.astro
+++ b/src/pages/switches.astro
@@ -1,13 +1,10 @@
 ---
-import { getProductFilters, getProducts } from './../utils/shopify';
+import { KeySwitchSection } from '@/components/KeySwitchSection';
 import BaseLayout from '../layouts/BaseLayout.astro';
 import { setCache } from '../utils/cache';
-import { KeySwitchSection } from '@/components/KeySwitchSection';
 
 const title = 'Switches';
-const headers = Astro.request.headers;
 const ip = Astro.clientAddress;
-const filters = await getProductFilters({ buyerIP: ip });
 
 setCache.short(Astro);
 ---
@@ -17,7 +14,7 @@ setCache.short(Astro);
     <div class="flex max-w-screen-xl flex-col gap-16">
       <h1 class="ms-[-5px] mt-[-5px] text-8xl font-bold">All switches</h1>
       <div class="flex flex-col gap-6">
-        <KeySwitchSection availableFilters={filters} buyerIP={ip} client:load />
+        <KeySwitchSection buyerIP={ip} client:load />
       </div>
     </div>
   </div>
