--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,9 +10,7 @@ const buyerIP = Astro.clientAddress;
 <header class="sticky top-0 z-40 backdrop-blur-sm">
   <div class="h-4 bg-black"></div>
   <nav class="grid grid-cols-3 gap-4">
-    <div
-      class="text-eggwhite col-start-2 flex justify-self-center rounded-b-lg bg-black px-12 py-5 font-medium"
-    >
+    <div class="text-eggwhite col-start-2 flex justify-self-center rounded-b-lg bg-black px-12 py-5 font-medium">
       tastaturwerk schaffhausen
     </div>
     <ul class="col-start-3 my-5 me-20 flex gap-20 justify-self-end text-sm font-medium">
