--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,9 +1,4 @@
-<svg
-  class="h-auto w-16 sm:w-28"
-  viewBox="0 0 3039 1299"
-  fill="none"
-  xmlns="http://www.w3.org/2000/svg"
->
+<svg class="h-auto w-16 sm:w-28" viewBox="0 0 3039 1299" fill="none" xmlns="http://www.w3.org/2000/svg">
   <g id="astro-shopify">
     <g id="shopify">
       <path
