--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,19 +1,7 @@
 <footer class="text-sm text-gray-600">
   <div class="container grid items-center gap-5 py-8 sm:flex sm:gap-10">
-    <a
-      href="https://astro.build"
-      target="_blank"
-      class="flex max-w-fit items-center gap-2"
-      rel="noopener noreferrer"
-    >
-      <svg
-        class="h-auto w-6"
-        width="1280"
-        height="1280"
-        viewBox="0 0 1280 1280"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
+    <a href="https://astro.build" target="_blank" class="flex max-w-fit items-center gap-2" rel="noopener noreferrer">
+      <svg class="h-auto w-6" width="1280" height="1280" viewBox="0 0 1280 1280" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path
           fill-rule="evenodd"
           clip-rule="evenodd"
@@ -30,25 +18,11 @@
           d="M840.951 900.754C805.253 931.279 734.002 952.097 651.929 952.097C551.197 952.097 466.767 920.737 444.363 878.561C436.354 902.732 434.558 930.396 434.558 948.068C434.558 948.068 429.281 1034.84 489.636 1095.2C489.636 1063.86 515.042 1038.46 546.381 1038.46C600.097 1038.46 600.036 1085.32 599.987 1123.34C599.986 1124.48 599.984 1125.61 599.984 1126.73C599.984 1184.44 635.255 1233.91 685.416 1254.77C677.924 1239.36 673.721 1222.05 673.721 1203.77C673.721 1148.73 706.034 1128.23 743.588 1104.41L743.588 1104.41C773.469 1085.46 806.668 1064.41 829.548 1022.17C841.486 1000.13 848.265 974.893 848.265 948.068C848.265 931.573 845.702 915.676 840.951 900.754Z"
           fill="url(#paint1_linear_709_110)"></path>
         <defs>
-          <linearGradient
-            id="paint0_linear_709_110"
-            x1="882.997"
-            y1="27.1132"
-            x2="638.955"
-            y2="866.902"
-            gradientUnits="userSpaceOnUse"
-          >
+          <linearGradient id="paint0_linear_709_110" x1="882.997" y1="27.1132" x2="638.955" y2="866.902" gradientUnits="userSpaceOnUse">
             <stop stop-color="#000014"></stop>
             <stop offset="1" stop-color="#150426"></stop>
           </linearGradient>
-          <linearGradient
-            id="paint1_linear_709_110"
-            x1="1001.68"
-            y1="652.45"
-            x2="790.326"
-            y2="1094.91"
-            gradientUnits="userSpaceOnUse"
-          >
+          <linearGradient id="paint1_linear_709_110" x1="1001.68" y1="652.45" x2="790.326" y2="1094.91" gradientUnits="userSpaceOnUse">
             <stop stop-color="#FF1639"></stop>
             <stop offset="1" stop-color="#FF1639" stop-opacity="0"></stop>
           </linearGradient>
@@ -57,26 +31,13 @@
 
       Made with Astro
     </a>
-    <a
-      class="flex items-center gap-2"
-      href="https://github.com/thomasKn/astro-shopify/"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      <svg
-        class="text-gray-500 h-5 w-5"
-        width="14"
-        height="14"
-        viewBox="0 0 14 14"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
+    <a class="flex items-center gap-2" href="https://github.com/thomasKn/astro-shopify/" target="_blank" rel="noopener noreferrer">
+      <svg class="h-5 w-5 text-gray-500" width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg"
         ><g clip-path="url(#clip0_1989_191)"
           ><path
             d="M7.00001 0C3.13391 0 0 3.21295 0 7.17755C0 10.3482 2.0055 13.0388 4.7873 13.9875C5.1373 14.0534 5.26471 13.832 5.26471 13.6414C5.26471 13.4716 5.25912 13.0195 5.25561 12.4212C3.3082 12.8547 2.8973 11.4589 2.8973 11.4589C2.5795 10.6291 2.1203 10.4084 2.1203 10.4084C1.48471 9.96418 2.16861 9.97279 2.16861 9.97279C2.87071 10.0229 3.24032 10.7122 3.24032 10.7122C3.86472 11.8085 4.87903 11.4918 5.27732 11.3084C5.34171 10.8448 5.52232 10.5288 5.72251 10.3497C4.16851 10.1684 2.534 9.55218 2.534 6.80211C2.534 6.01893 2.807 5.37764 3.2543 4.87605C3.1822 4.69476 2.94211 3.96463 3.32289 2.97722C3.32289 2.97722 3.91089 2.78376 5.24789 3.71238C5.77305 3.55992 6.37629 3.47184 6.99948 3.4709C7.59448 3.47377 8.19351 3.5533 8.7528 3.71238C10.0891 2.78376 10.6757 2.97649 10.6757 2.97649C11.0579 3.9646 10.8171 4.69475 10.7457 4.87603C11.1937 5.3776 11.4653 6.0189 11.4653 6.80208C11.4653 9.55931 9.82799 10.1662 8.26908 10.3439C8.52037 10.5653 8.74368 11.0031 8.74368 11.6731C8.74368 12.6318 8.73529 13.4064 8.73529 13.6414C8.73529 13.8335 8.86129 14.057 9.21689 13.9868C12.0205 13.0032 14 10.3285 14 7.18046C14 7.17943 14 7.17841 14 7.17738C14 3.21278 10.8654 0 7.00001 0Z"
             fill="currentColor"></path></g
-        ><defs
-          ><clipPath id="clip0_1989_191"><rect width="14" height="14" fill="white"></rect></clipPath></defs
-        ></svg
+        ><defs><clipPath id="clip0_1989_191"><rect width="14" height="14" fill="white"></rect></clipPath></defs></svg
       >
       View source
     </a>
@@ -104,12 +65,7 @@
       Built with Svelte
     </a>
 
-    <a
-      rel="noopener noreferrer"
-      target="_blank"
-      class="flex items-center gap-2"
-      href="https://tailwindcss.com"
-    >
+    <a rel="noopener noreferrer" target="_blank" class="flex items-center gap-2" href="https://tailwindcss.com">
       <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 54 33"
         ><g clip-path="url(#prefix__clip0)"
           ><path
@@ -117,8 +73,7 @@
             fill-rule="evenodd"
             d="M27 0c-7.2 0-11.7 3.6-13.5 10.8 2.7-3.6 5.85-4.95 9.45-4.05 2.054.513 3.522 2.004 5.147 3.653C30.744 13.09 33.808 16.2 40.5 16.2c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C36.756 3.11 33.692 0 27 0zM13.5 16.2C6.3 16.2 1.8 19.8 0 27c2.7-3.6 5.85-4.95 9.45-4.05 2.054.514 3.522 2.004 5.147 3.653C17.244 29.29 20.308 32.4 27 32.4c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C23.256 19.31 20.192 16.2 13.5 16.2z"
             clip-rule="evenodd"></path></g
-        ><defs><clipPath id="prefix__clip0"><path fill="#fff" d="M0 0h54v32.4H0z"></path></clipPath></defs
-        ></svg
+        ><defs><clipPath id="prefix__clip0"><path fill="#fff" d="M0 0h54v32.4H0z"></path></clipPath></defs></svg
       >
       Designed using Tailwind CSS
     </a>
