--- a/src/components/ProductBreadcrumb.astro
+++ b/src/components/ProductBreadcrumb.astro
@@ -9,18 +9,12 @@ const { title } = Astro.props as Props;
 (https://www.hyperui.dev/components/application-ui/breadcrumbs#component-1)
 Thank you to the HyperUI team for providing this open source component. -->
 <nav aria-label=" Breadcrumb">
-  <ol role="list" class="text-sm text-gray-600 flex items-center gap-1">
+  <ol role="list" class="flex items-center gap-1 text-sm text-gray-600">
     <li>
-      <a href="/" class="text-gray-800 hover:text-gray-700 block transition">
+      <a href="/" class="block text-gray-800 transition hover:text-gray-700">
         <span class="sr-only">Home</span>
 
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-4 w-4"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path
             stroke-linecap="round"
             stroke-linejoin="round"
@@ -41,7 +35,7 @@ Thank you to the HyperUI team for providing this open source component. -->
     </li>
 
     <li>
-      <div class="hover:text-gray-700 block transition">{title}</div>
+      <div class="block transition hover:text-gray-700">{title}</div>
     </li>
   </ol>
 </nav>
