--- a/src/pages/switches/[...handle].astro
+++ b/src/pages/switches/[...handle].astro
@@ -42,7 +42,7 @@ setCache.short(Astro);
           <div class="mt-8 lg:col-span-5 lg:mt-0">
             <ProductInformations title={product.title} price={firstVariant?.price} />
 
-            <div></div>
+            <div />
 
             <div class="mt-8">
               <ProductAccordions />
