less layout shifts

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ const buyerIP = Astro.clientAddress;
     <div class="text-eggwhite col-start-2 flex justify-self-center rounded-b-lg bg-black px-12 py-5 font-medium">
       tastaturwerk schaffhausen
     </div>
-    <ul class="col-start-3 my-5 me-20 flex gap-20 justify-self-end text-sm font-medium">
+    <ul class="col-start-3 my-5 me-20 flex h-[40px] gap-20 justify-self-end text-sm font-medium">
       <SearchSection buyerIP={buyerIP} client:only="react" />
     </ul>
   </nav>
