--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,7 +12,8 @@ export interface Props {
   description?: string;
 }
 
-const defaultDesc = 'A lightweight and minimalit Astro starter theme using Shopify with Svelte, Tailwind, and TypeScript.';
+const defaultDesc =
+  'A lightweight and minimalit Astro starter theme using Shopify with Svelte, Tailwind, and TypeScript.';
 
 const { title, description = defaultDesc } = Astro.props as Props;
 ---
@@ -23,7 +24,10 @@ const { title, description = defaultDesc } = Astro.props as Props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
