--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,4 @@
 @import 'tailwindcss';
-
-@plugin 'tailwindcss-animate';
-
 @custom-variant dark (&:is(.dark *));
 
 @theme {
@@ -10,21 +7,35 @@
   --color-eggwhite: #e0d6cc;
   --color-hover: rgba(0, 0, 0, 0.1);
 
-  --animate-wiggle: wiggle 1s ease-in-out infinite;
-  @keyframes wiggle {
+  --animate-dance-one: dance-one 1s ease-in-out infinite;
+  --animate-dance-two: dance-two 0.6s ease-in-out infinite;
+  --animate-dance-three: dance-three 0.4s ease-in-out infinite;
+
+  @keyframes dance-one {
     0%,
     100% {
-      transform: rotate(-3deg);
+      transform: translateY(-25%);
+      animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
     }
     50% {
-      transform: rotate(3deg);
+      transform: none;
+      animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
     }
   }
 
-  --animate-bounce-1: bounce-2 1s ease-in-out infinite;
-  --animate-bounce-2: bounce-2 0.6s ease-in-out infinite;
-  --animate-bounce-3: bounce-2 0.4s ease-in-out infinite;
-  @keyframes bounce-2 {
+  @keyframes dance-two {
+    0%,
+    100% {
+      transform: translateY(-25%);
+      animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    }
+    50% {
+      transform: none;
+      animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    }
+  }
+
+  @keyframes dance-three {
     0%,
     100% {
       transform: translateY(-25%);
