inital version of header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,17 +1,18 @@
 ---
-import { SearchSection } from './SearchSection';
 
-const buyerIP = Astro.clientAddress;
 ---
 
 <header class="sticky top-0 z-40 backdrop-blur-sm">
-  <div class="h-4 bg-black"></div>
-  <nav class="grid grid-cols-3 gap-4">
-    <div class="text-eggwhite col-start-2 flex justify-self-center rounded-b-lg bg-black px-12 py-5 font-medium">
-      tastaturwerk schaffhausen
+  <div class="bg-primary flex h-8 items-center justify-between px-4 shadow-md">
+    <div></div>
+    <small class="text-primary-foreground leading-8 font-bold">tastaturwerk schaffhausen :]</small>
+    <div class="flex gap-2">
+      <div class="bg-warn h-4 w-4 rounded-xs"></div>
+      <div class="bg-success h-4 w-4 rounded-xs"></div>
+      <div class="bg-error h-4 w-4 rounded-xs"></div>
     </div>
-    <ul class="col-start-3 my-5 me-20 flex h-[40px] gap-2 justify-self-end text-sm font-medium">
-      <SearchSection buyerIP={buyerIP} client:only="react" />
-    </ul>
+  </div>
+  <nav class="grid grid-cols-3 gap-4">
+    <ul class="col-start-3 my-5 me-20 flex h-[40px] gap-2 justify-self-end text-sm font-medium"></ul>
   </nav>
 </header>
