--- a/src/components/SideNav.astro
+++ b/src/components/SideNav.astro
@@ -2,13 +2,16 @@
 import { z } from 'zod';
 import SideNavItem from './SideNavItem.astro';
 import { routes } from '../utils/routes';
+import { SearchSection } from './SearchSection';
 
 const { url } = Astro.request;
+const buyerIP = Astro.clientAddress;
 const currentRoute = new URL(url).pathname;
 ---
 
 <nav class="sticky top-[128px] ms-8 max-h-[calc(100svh-128px)] overflow-y-auto">
   <ul class="flex flex-col gap-5 text-sm font-bold">
     {routes.map((route) => <SideNavItem route={route} currentRoute={currentRoute} />)}
+    <SearchSection buyerIP={buyerIP} client:only="react" />
   </ul>
 </nav>
