--- a/src/components/SideNav.astro
+++ b/src/components/SideNav.astro
@@ -9,7 +9,7 @@ const currentRoute = new URL(url).pathname;
 ---
 
 <nav class="sticky top-[128px] ms-8 max-h-[calc(100svh-128px)] overflow-y-auto">
-  <ul class="flex flex-col gap-5 text-sm font-bold">
+  <ul class="text-primary flex w-50 flex-col gap-30 text-sm font-bold">
     <div class="flex flex-col gap-5">
       {routes.map((route) => <SideNavRouteItem route={route} currentRoute={currentRoute} />)}
     </div>
