--- a/src/components/SideNavRouteItem.astro
+++ b/src/components/SideNavRouteItem.astro
@@ -14,12 +14,16 @@ const { route, currentRoute } = Astro.props as Props;
 ---
 
 <>
-  <li class="flex gap-4" class:list={['hover:text-black', { 'text-stone-500': !currentRoute.includes(route.link) }]}>
-    <SideNavItemIcon icon={route.icon} />
-    <a href={route.link}>
-      {route.title}
-    </a>
-    <ShortcutBadge shortcut={route.shortcut} client:idle />
-    <RouteShortcut route={route} client:idle />
+  <li class="flex justify-between" class:list={['hover:text-black', { 'text-stone-500': !currentRoute.includes(route.link) }]}>
+    <div class="flex gap-4">
+      <SideNavItemIcon icon={route.icon} />
+      <a href={route.link}>
+        {route.title}
+      </a>
+    </div>
+    <div class="flex">
+      <ShortcutBadge shortcut={route.shortcut} client:idle />
+      <RouteShortcut route={route} client:idle />
+    </div>
   </li>
 </>
