--- a/src/pages/switches.astro
+++ b/src/pages/switches.astro
@@ -11,7 +11,7 @@ setCache.short(Astro);
 
 <BaseLayout title={title}>
   <div class="flex max-w-screen-xl flex-col gap-16">
-    <h1 class="ms-[-5px] mt-[-5px] text-8xl font-bold">All switches</h1>
+    <h1 class="text-primary ms-[-5px] mt-[-5px] text-8xl font-bold">All switches</h1>
     <div class="flex flex-col gap-6">
       <KeySwitchSection buyerIP={ip} client:load />
     </div>
