--- a/src/components/SideNav.astro
+++ b/src/components/SideNav.astro
@@ -8,8 +8,8 @@ const buyerIP = Astro.clientAddress;
 const currentRoute = new URL(url).pathname;
 ---
 
-<nav class="sticky top-[128px] ms-8 max-h-[calc(100svh-128px)] overflow-y-auto">
-  <ul class="text-primary flex w-50 flex-col gap-30 text-sm font-bold">
+<nav class="sticky top-[128px] ms-8 h-[calc(100svh-128px)] overflow-x-hidden overflow-y-auto">
+  <ul class="text-primary flex w-50 flex-col gap-30 pt-2 text-sm font-bold">
     <div class="flex flex-col gap-5">
       {routes.map((route) => <SideNavRouteItem route={route} currentRoute={currentRoute} />)}
     </div>
