--- a/src/components/SideNavRouteItem.astro
+++ b/src/components/SideNavRouteItem.astro
@@ -14,14 +14,14 @@ const { route, currentRoute } = Astro.props as Props;
 ---
 
 <>
-  <li class="flex justify-between" class:list={['hover:text-black', { 'text-stone-500': !currentRoute.includes(route.link) }]}>
-    <div class="flex gap-4">
+  <li class="flex gap-4 xl:justify-between" class:list={['hover:text-black', { 'text-stone-500': !currentRoute.includes(route.link) }]}>
+    <div class="flex cursor-pointer gap-4">
       <SideNavItemIcon icon={route.icon} />
-      <a href={route.link}>
+      <a href={route.link} class="hidden xl:block">
         {route.title}
       </a>
     </div>
-    <div class="flex">
+    <div class="hidden md:block">
       <ShortcutBadge shortcut={route.shortcut} client:idle />
       <RouteShortcut route={route} client:idle />
     </div>
