--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,8 @@
   --color-eggwhite: #e0d6cc;
   --color-hover: rgba(0, 0, 0, 0.1);
 
+  --grid-layout-items: repeat(auto-fit, minmax(100px, 1fr));
+
   --animate-dance-one: dance-one 1s ease-in-out infinite;
   --animate-dance-two: dance-two 0.6s ease-in-out infinite;
   --animate-dance-three: dance-three 0.4s ease-in-out infinite;
