--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -59,7 +59,7 @@
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: #e0d6cc;
-  --popover-foreground: oklch(0.145 0 0);
+  --popover-foreground: #403c35;
   --primary: #403c35;
   --primary-foreground: #e0d6cc;
   --secondary: #736d63;
