--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@
 
 <header class="sticky top-0 z-40 backdrop-blur-sm">
   <div class="bg-primary flex h-8 items-center justify-between px-4 shadow-md">
-    <div></div>
+    <div class="w-16"></div>
     <small class="text-primary-foreground leading-8 font-bold">tastaturwerk schaffhausen :]</small>
     <div class="flex gap-2">
       <div class="bg-warn h-4 w-4 rounded-xs"></div>
