--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,10 +3,10 @@
 ---
 
 <header class="sticky top-0 z-40 backdrop-blur-sm">
-  <div class="bg-primary flex h-8 items-center justify-between px-4 shadow-md">
-    <div class="w-16"></div>
-    <small class="text-primary-foreground leading-8 font-bold">tastaturwerk schaffhausen :]</small>
-    <div class="flex gap-2">
+  <div class="bg-primary grid h-8 grid-cols-3 items-center justify-between px-4 shadow-md">
+    <div></div>
+    <small class="text-primary-foreground justify-self-center leading-8 font-bold">tastaturwerk schaffhausen :]</small>
+    <div class="flex gap-2 justify-self-end">
       <div class="bg-warn h-4 w-4 rounded-xs"></div>
       <div class="bg-success h-4 w-4 rounded-xs"></div>
       <div class="bg-error h-4 w-4 rounded-xs"></div>
