--- a/src/pages/switches.astro
+++ b/src/pages/switches.astro
@@ -2,6 +2,7 @@
 import { KeySwitchSection } from '@/components/KeySwitchSection';
 import BaseLayout from '../layouts/BaseLayout.astro';
 import { setCache } from '../utils/cache';
+import { PageTitle } from '@/components/PageTitle';
 
 const title = 'Switches';
 const ip = Astro.clientAddress;
@@ -11,7 +12,7 @@ setCache.short(Astro);
 
 <BaseLayout title={title}>
   <div class="flex max-w-screen-xl flex-col gap-6">
-    <h1 class="text-primary ms-[-5px] mt-[-5px] text-8xl font-bold">All switches</h1>
+    <PageTitle titleText="All switches" client:load />
     <div class="flex flex-col gap-6">
       <KeySwitchSection buyerIP={ip} client:load />
     </div>
