--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,16 +3,27 @@
 ---
 
 <header class="sticky top-0 z-40 backdrop-blur-sm">
-  <div class="bg-primary grid h-8 grid-cols-3 items-center justify-between px-4 shadow-md">
-    <div></div>
-    <small class="text-primary-foreground justify-self-center leading-8 font-bold">tastaturwerk schaffhausen :]</small>
-    <div class="flex gap-2 justify-self-end">
-      <div class="bg-warn h-4 w-4 rounded-xs"></div>
-      <div class="bg-success h-4 w-4 rounded-xs"></div>
-      <div class="bg-error h-4 w-4 rounded-xs"></div>
+  <div class="bg-secondary grid h-3 grid-cols-6 gap-5 xl:grid-cols-10 xl:gap-8">
+    <div class="xl:col-span-2"></div>
+    <div class="text-primary-foreground col-span-4 flex justify-between xl:col-span-6">
+      <button
+        class="bg-background text-primary flex w-40 -translate-y-1 items-center justify-between rounded-b-lg border-2 p-2 shadow-sm"
+        type="button"
+      >
+        <span class="text-sm">search</span>
+        <small class="text-[10px]">CTRL+K</small>
+      </button>
+      <button
+        class="bg-background text-primary flex w-40 -translate-y-1 items-center justify-between rounded-b-lg border-2 p-2 shadow-sm"
+        type="button"
+      >
+        <span class="text-sm">cart</span>
+        <small class="text-[10px]">CTRL+L</small>
+      </button>
     </div>
+    <div></div>
   </div>
   <nav class="grid grid-cols-3 gap-4">
-    <ul class="col-start-3 my-5 me-20 flex h-[40px] gap-2 justify-self-end text-sm font-medium"></ul>
+    <ul class="col-start-3 my-5 me-20 flex h-10 gap-2 justify-self-end text-sm font-medium"></ul>
   </nav>
 </header>
