--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,8 +3,8 @@ import Header from '../components/Header.astro';
 import Cart from '../components/Cart.svelte';
 import '../styles/global.css';
 import SideNav from '../components/SideNav.astro';
-import '@fontsource-variable/ubuntu-sans';
-import '@fontsource-variable/ubuntu-sans-mono';
+import '@fontsource/space-mono/400.css';
+import '@fontsource/space-mono/700.css';
 
 export interface Props {
   title: string;
