--- a/src/pages/switches.astro
+++ b/src/pages/switches.astro
@@ -11,8 +11,8 @@ setCache.short(Astro);
 ---
 
 <BaseLayout title={title}>
-  <div class="flex max-w-screen-xl flex-col gap-6">
-    <PageTitle titleText="All switches" client:load />
+  <div class="flex max-w-7xl flex-col rounded-3xl border-2 p-5 px-7 shadow-md">
+    <PageTitle titleText="Switches" client:load />
     <div class="flex flex-col gap-6">
       <KeySwitchSection buyerIP={ip} client:load />
     </div>
